--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   </header>
   <div role="main">
 
+    <h1 id="content-title"></h1>
     <div id="content-container">
       <!-- main content area -->
     </div>
@@ -61,9 +62,10 @@
   <!-- end scripts -->
 
   <script>
-    var URL = "http://cnx.org/content/m42955/latest/body";
+    var URL = "http://cnx.org/content/m42955/latest";
     $(document).ready(function() {
-      $("#content-container").load(URL);
+      $("#content-container").load(URL + "/body");
+      $("#content-title").load(URL + "/Title")
     });
   </script>
 </body>
