Use a click event to activate the links on the index page.

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 
     <h1 id="content-title"></h1>
     <div id="content-container">
-      <a href="/#!/content/m42092">Physics: An Introduction (latest)</a>
+      <a href="#!/content/m42092">Physics: An Introduction (latest)</a>
       <br>
-      <a href="/#!/content/m42092@1.4">Physics: An Introduction (1.4)</a>
+      <a href="#!/content/m42092@1.4">Physics: An Introduction (1.4)</a>
       <br>
-      <a href="/#!/content/m42092@1.1">Physics: An Introduction (1.1)</a>
+      <a href="#!/content/m42092@1.1">Physics: An Introduction (1.1)</a>
       <!-- main content area -->
     </div>
 
